--- a/src/Dex.Cap/Dex.Cap.OnceExecutor.Memory/Dex.Cap.OnceExecutor.Memory.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor.Memory/Dex.Cap.OnceExecutor.Memory.csproj
@@ -5,7 +5,10 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
-        <PackageVersion>2.0.2</PackageVersion>
+        <InformationalVersion>6.0</InformationalVersion>
+        <PackageVersion>6.0.0</PackageVersion>
+        <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
+        <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
 
     <!--Для NuGet-->
