--- a/src/Dex.CreditCardType.Resolver/Dex.CreditCardType.Resolver.csproj
+++ b/src/Dex.CreditCardType.Resolver/Dex.CreditCardType.Resolver.csproj
@@ -5,7 +5,10 @@
         <PackageTags>dex; bank card type resolver, luna check</PackageTags>
         <Nullable>enable</Nullable>
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
-        <PackageVersion>1.0.25</PackageVersion>
+        <InformationalVersion>1.0</InformationalVersion>
+        <PackageVersion>1.0.30</PackageVersion>
+        <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
+        <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
 
     <!--Для NuGet-->
