--- a/src/Dex.Cap/Dex.Cap.OnceExecutor/Dex.Cap.OnceExecutor.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor/Dex.Cap.OnceExecutor.csproj
@@ -4,7 +4,10 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
-    <PackageVersion>2.9.40</PackageVersion>
+    <InformationalVersion>6.0</InformationalVersion>
+    <PackageVersion>6.0.0</PackageVersion>
+    <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
+    <FileVersion>$(PackageVersion)</FileVersion>
   </PropertyGroup>
 
 
