--- a/src/Dex.Entity/Dex.Entity.csproj
+++ b/src/Dex.Entity/Dex.Entity.csproj
@@ -4,7 +4,10 @@
         <TargetFramework>netstandard2.1</TargetFramework>
         <Nullable>enable</Nullable>
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
-        <PackageVersion>1.0.1</PackageVersion>
+        <InformationalVersion>1.0</InformationalVersion>
+        <PackageVersion>1.0.30</PackageVersion>
+        <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
+        <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
 
     <!--Для NuGet-->
