--- a/src/Dex.Extensions/Dex.Extensions.csproj
+++ b/src/Dex.Extensions/Dex.Extensions.csproj
@@ -4,7 +4,10 @@
         <LangVersion>Latest</LangVersion>
         <Nullable>enable</Nullable>
         <TargetFramework>netstandard2.1</TargetFramework>
-        <PackageVersion>1.0.11</PackageVersion>
+        <InformationalVersion>1.0</InformationalVersion>
+        <PackageVersion>1.0.30</PackageVersion>
+        <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
+        <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
     <!--Для NuGet-->
     <PropertyGroup>
