--- a/src/Dex.Lock/Dex.Lock/Dex.Lock.csproj
+++ b/src/Dex.Lock/Dex.Lock/Dex.Lock.csproj
@@ -4,7 +4,10 @@
         <TargetFramework>net6.0</TargetFramework>
         <PackageTags>dex; async lock provider abstraction; dex inprocess async lock;</PackageTags>
         <Nullable>enable</Nullable>
-        <PackageVersion>2.1.11</PackageVersion>
+        <InformationalVersion>6.0</InformationalVersion>
+        <PackageVersion>6.0.0</PackageVersion>
+        <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
+        <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
     <!--Для NuGet-->
     <PropertyGroup>
@@ -20,7 +23,7 @@
         <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All" />
     </ItemGroup>
     <!--/Для NuGet-->
 
