--- a/src/Dex.Pagination/Dex.Pagination.csproj
+++ b/src/Dex.Pagination/Dex.Pagination.csproj
@@ -3,8 +3,11 @@
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
-        <PackageVersion>2.1.0</PackageVersion>
         <LangVersion>default</LangVersion>
+        <InformationalVersion>6.0</InformationalVersion>
+        <PackageVersion>6.0.0</PackageVersion>
+        <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
+        <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
     
     <!--Для NuGet-->
