--- a/src/Dex.MassTransit/Dex.MassTransit.ActivityTrace/Dex.MassTransit.ActivityTrace.csproj
+++ b/src/Dex.MassTransit/Dex.MassTransit.ActivityTrace/Dex.MassTransit.ActivityTrace.csproj
@@ -3,7 +3,10 @@
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
-        <Version>2.1.28</Version>
+        <InformationalVersion>6.0</InformationalVersion>
+        <PackageVersion>6.0.0</PackageVersion>
+        <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
+        <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
 
     <!--Для NuGet-->
@@ -22,8 +25,8 @@
     <!--/Для NuGet-->
 
     <ItemGroup>
-      <PackageReference Include="MassTransit" Version="8.0.9" />
-      <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="6.0.0" />
+        <PackageReference Include="MassTransit"/>
+        <PackageReference Include="System.Diagnostics.DiagnosticSource"/>
     </ItemGroup>
 
 </Project>
