--- a/src/Dex.Cap/Dex.Cap.AspNet.Test/Dex.Cap.AspNet.Test.csproj
+++ b/src/Dex.Cap/Dex.Cap.AspNet.Test/Dex.Cap.AspNet.Test.csproj
@@ -1,19 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-	<IsPackable>false</IsPackable>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+        <IsPackable>false</IsPackable>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.8" />
-    <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.4.0-beta.3" />
-    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc9.9" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL"/>
+        <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.8.1"/>
+        <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.8.1"/>
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Dex.Cap.Outbox.Ef\Dex.Cap.Outbox.Ef.csproj" />
-    <ProjectReference Include="..\Dex.Cap.Outbox.QuartzHandler\Dex.Cap.Outbox.AspNetScheduler.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\Dex.Cap.Outbox.Ef\Dex.Cap.Outbox.Ef.csproj"/>
+        <ProjectReference Include="..\Dex.Cap.Outbox.QuartzHandler\Dex.Cap.Outbox.AspNetScheduler.csproj"/>
+    </ItemGroup>
 
 </Project>
