--- a/src/Dex.Cap/Dex.Cap.OnceExecutor.Neo4j/Dex.Cap.OnceExecutor.Neo4j.csproj
+++ b/src/Dex.Cap/Dex.Cap.OnceExecutor.Neo4j/Dex.Cap.OnceExecutor.Neo4j.csproj
@@ -4,7 +4,10 @@
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
-        <PackageVersion>2.9.35</PackageVersion>
+        <InformationalVersion>6.0</InformationalVersion>
+        <PackageVersion>6.0.0</PackageVersion>
+        <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
+        <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
     <!--Для NuGet-->
     <PropertyGroup>
@@ -20,16 +23,16 @@
         <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All"/>
     </ItemGroup>
     <!--/Для NuGet-->
     <ItemGroup>
-        <ProjectReference Include="..\Dex.Cap.OnceExecutor\Dex.Cap.OnceExecutor.csproj" />
+        <ProjectReference Include="..\Dex.Cap.OnceExecutor\Dex.Cap.OnceExecutor.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Dex.Neo4J" Version="1.1.26" />
-        <PackageReference Include="Neo4jClient" Version="5.1.3" />
+        <PackageReference Include="Dex.Neo4J"/>
+        <PackageReference Include="Neo4jClient" Version="5.1.15"/>
     </ItemGroup>
 
 </Project>
