--- a/src/Dex.Cap/Tests/Dex.Cap.ClickHouse.Test/Dex.Cap.ClickHouse.Test.csproj
+++ b/src/Dex.Cap/Tests/Dex.Cap.ClickHouse.Test/Dex.Cap.ClickHouse.Test.csproj
@@ -6,14 +6,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="NUnit" Version="3.13.3" />
-        <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
-        <PackageReference Include="Octonica.ClickHouseClient" Version="1.3.1" />
+        <PackageReference Include="NUnit"/>
+        <PackageReference Include="NUnit3TestAdapter"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk"/>
+        <PackageReference Include="Octonica.ClickHouseClient" Version="3.1.3"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Dex.Cap.OnceExecutor.ClickHouse\Dex.Cap.OnceExecutor.ClickHouse.csproj" />
+        <ProjectReference Include="..\..\Dex.Cap.OnceExecutor.ClickHouse\Dex.Cap.OnceExecutor.ClickHouse.csproj"/>
     </ItemGroup>
 
 </Project>
