--- a/src/Dex.Events/Dex.Events.Distributed.OutboxExtensions/Dex.Events.Distributed.OutboxExtensions.csproj
+++ b/src/Dex.Events/Dex.Events.Distributed.OutboxExtensions/Dex.Events.Distributed.OutboxExtensions.csproj
@@ -4,8 +4,11 @@
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
-        <PackageVersion>2.1.1</PackageVersion>
         <PackageTags>outbox distributed events</PackageTags>
+        <InformationalVersion>6.0</InformationalVersion>
+        <PackageVersion>6.0.0</PackageVersion>
+        <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
+        <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
 
     <!--Для NuGet-->
@@ -23,7 +26,7 @@
     </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="Dex.Cap.Outbox" Version="2.3.6" />
-      <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
+      <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All" />
     </ItemGroup>
     <!--/Для NuGet-->
 
