--- a/src/Dex.Neo4J/Dex.Neo4J.csproj
+++ b/src/Dex.Neo4J/Dex.Neo4J.csproj
@@ -5,7 +5,10 @@
         <PackageTags>dex; buffer</PackageTags>
         <Nullable>enable</Nullable>
         <AnalysisMode>AllEnabledByDefault</AnalysisMode>
-        <PackageVersion>1.1.26</PackageVersion>
+        <InformationalVersion>1.0</InformationalVersion>
+        <PackageVersion>1.1.30</PackageVersion>
+        <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
+        <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
 
     <!--Для NuGet-->
@@ -25,7 +28,7 @@
 
     <ItemGroup>
         <PackageReference Include="Dex.Extensions" Version="1.0.11" />
-        <PackageReference Include="Neo4jClient" Version="5.1.2" />
+        <PackageReference Include="Neo4jClient" Version="5.1.15" />
     </ItemGroup>
 
     <ItemGroup>
