--- a/src/Dex.SecurityToken/Dex.SecurityToken.DistributedStorage/Dex.SecurityToken.DistributedStorage.csproj
+++ b/src/Dex.SecurityToken/Dex.SecurityToken.DistributedStorage/Dex.SecurityToken.DistributedStorage.csproj
@@ -5,10 +5,13 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>default</LangVersion>
-        <PackageVersion>2.2.2</PackageVersion>
         <PackageTags>security token management, distributed storage</PackageTags>
+        <InformationalVersion>6.0</InformationalVersion>
+        <PackageVersion>6.0.0</PackageVersion>
+        <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
+        <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
-    
+
     <!--Для NuGet-->
     <PropertyGroup>
         <PackageProjectUrl>https://github.com/dex-it/dex-common/tree/main/src/Dex.SecurityToken</PackageProjectUrl>
@@ -24,17 +27,17 @@
     <!--/Для NuGet-->
 
     <ItemGroup>
-      <ProjectReference Include="..\Dex.SecurityTokenProvider\Dex.SecurityTokenProvider.csproj" />
+        <ProjectReference Include="..\Dex.SecurityTokenProvider\Dex.SecurityTokenProvider.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.12" />
+        <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis"/>
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Update="DistributedCacheTypedClient.cs">
-        <DependentUpon>IDistributedCacheTypedClient.cs</DependentUpon>
-      </Compile>
+        <Compile Update="DistributedCacheTypedClient.cs">
+            <DependentUpon>IDistributedCacheTypedClient.cs</DependentUpon>
+        </Compile>
     </ItemGroup>
 
 </Project>
