--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch: # Allow running the workflow manually from the GitHub UI
   push:
     branches:
-      - 'main'       # Run the workflow when pushing to the main branch
+      - 'netcore-6'       # Run the workflow when pushing to the netcore-6 branch
   pull_request:
     branches:
       - '*'          # Run the workflow for all pull requests
@@ -129,7 +129,7 @@ jobs:
         if: ${{ always() }}
 
   deploy:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/netcore-6'
     runs-on: ubuntu-latest
     needs: [ validate_nuget, run_test ]
     steps:
