--- a/src/Dex.Cap/Tests/DevelopmentTests/DevelopmentTests.csproj
+++ b/src/Dex.Cap/Tests/DevelopmentTests/DevelopmentTests.csproj
@@ -3,13 +3,12 @@
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
-
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk"/>
-        <PackageReference Include="NUnit" Version="3.14.0"/>
+        <PackageReference Include="NUnit"/>
         <PackageReference Include="NUnit3TestAdapter"/>
         <PackageReference Include="coverlet.collector">
             <PrivateAssets>all</PrivateAssets>
