--- a/src/Dex.Specification/Dex.Specifications.EntityFramework/Dex.Specifications.EntityFramework.csproj
+++ b/src/Dex.Specification/Dex.Specifications.EntityFramework/Dex.Specifications.EntityFramework.csproj
@@ -2,8 +2,8 @@
 
     <PropertyGroup>
         <PackageTags>dex;specifications;entityframework</PackageTags>
-        <TargetFramework>net6.0</TargetFramework>
-        <Version>2.1.10</Version>
+        <TargetFramework>net8.0</TargetFramework>
+        <Version>2.1.11</Version>
     </PropertyGroup>
     <!--Для NuGet-->
     <PropertyGroup>
@@ -24,8 +24,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Dex.Extensions" Version="1.0.11" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.12" />
+        <PackageReference Include="Dex.Extensions"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore"/>
     </ItemGroup>
 
 </Project>
