--- a/src/Dex.Specification/Dex.Specifications.Extensions/Dex.Specifications.Extensions.csproj
+++ b/src/Dex.Specification/Dex.Specifications.Extensions/Dex.Specifications.Extensions.csproj
@@ -2,7 +2,10 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
-        <Version>1.1.15</Version>
+        <InformationalVersion>1.0</InformationalVersion>
+        <PackageVersion>1.1.30</PackageVersion>
+        <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
+        <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
     <!--Для NuGet-->
     <PropertyGroup>
