--- a/src/Dex.Specification/Dex.Specifications.EntityFramework/Dex.Specifications.EntityFramework.csproj
+++ b/src/Dex.Specification/Dex.Specifications.EntityFramework/Dex.Specifications.EntityFramework.csproj
@@ -3,7 +3,10 @@
     <PropertyGroup>
         <PackageTags>dex;specifications;entityframework</PackageTags>
         <TargetFramework>net6.0</TargetFramework>
-        <Version>2.1.10</Version>
+        <InformationalVersion>6.0</InformationalVersion>
+        <PackageVersion>6.0.0</PackageVersion>
+        <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
+        <FileVersion>$(PackageVersion)</FileVersion>
     </PropertyGroup>
     <!--Для NuGet-->
     <PropertyGroup>
@@ -20,12 +23,12 @@
     </PropertyGroup>
     <!--/Для NuGet-->
     <ItemGroup>
-        <ProjectReference Include="..\Dex.Specifications\Dex.Specifications.csproj" />
+        <ProjectReference Include="..\Dex.Specifications\Dex.Specifications.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Dex.Extensions" Version="1.0.11" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.12" />
+        <PackageReference Include="Dex.Extensions"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore"/>
     </ItemGroup>
 
 </Project>
