--- a/src/Dex.Specification/Dex.Specifications/Dex.Specifications.csproj
+++ b/src/Dex.Specification/Dex.Specifications/Dex.Specifications.csproj
@@ -4,7 +4,10 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <PackageTags>dex;specifications</PackageTags>
     <Nullable>enable</Nullable>
-    <Version>1.1.15</Version>
+    <InformationalVersion>1.0</InformationalVersion>
+    <PackageVersion>1.1.15</PackageVersion>
+    <AssemblyVersion>$(PackageVersion)</AssemblyVersion>
+    <FileVersion>$(PackageVersion)</FileVersion>
   </PropertyGroup>
 
   <!--Для NuGet-->
