- OutboxJobHandler, logger type fixed - refactor fetch envelopes from DB - rename OutboxHandler.cs => MainLoopOutboxHandler - refactoring OutboxHandler.ProcessAsync(), decrease code complexity - fix tests

--- a/src/Dex.Cap/Dex.Cap.Outbox/Dex.Cap.Outbox.csproj
+++ b/src/Dex.Cap/Dex.Cap.Outbox/Dex.Cap.Outbox.csproj
@@ -34,7 +34,7 @@
 
     <ItemGroup>
         <Compile Remove="Outbox\Neo4j\**"/>
-        <Compile Update="OutboxHandler.cs">
+        <Compile Update="MainLoopOutboxHandler.cs">
             <DependentUpon>IOutboxHandler.cs</DependentUpon>
         </Compile>
         <Compile Update="OutboxService.cs">
