dex.audit: добавлен logger

--- a/src/Dex.Audit/Dex.Audit.EF/Dex.Audit.EF.csproj
+++ b/src/Dex.Audit/Dex.Audit.EF/Dex.Audit.EF.csproj
@@ -12,7 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Dex.Audit.Contracts\Dex.Audit.Contracts.csproj" />
+      <ProjectReference Include="..\Dex.Audit.Client\Dex.Audit.Client.csproj" />
     </ItemGroup>
 
 </Project>
