dex.audit: feat: добавлен пример с логгером

--- a/src/Dex.Audit/Samples/Dex.Audit.ClientSample/appsettings.json
+++ b/src/Dex.Audit/Samples/Dex.Audit.ClientSample/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "RabbitMqOptions": {
+    "Host": "localhost",
+    "Port": 5672,
+    "VHost": "/",
+    "Username": "guest",
+    "Password": "guest"
+  },
   "AllowedHosts": "*"
 }
