--- a/src/Dex.Audit/Samples/Dex.Audit.ClientSample/Dex.Audit.ClientSample.csproj
+++ b/src/Dex.Audit/Samples/Dex.Audit.ClientSample/Dex.Audit.ClientSample.csproj
@@ -10,4 +10,12 @@
       <ProjectReference Include="..\..\Dex.Audit.Logger\Dex.Audit.Logger.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Dex.MassTransit.Rabbit" Version="8.0.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+      <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.6.2" />
+      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.6.2" />
+      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.6.2" />
+    </ItemGroup>
+
 </Project>
