--- a/src/Dex.Audit/Samples/Dex.Audit.ServerSample/appsettings.json
+++ b/src/Dex.Audit/Samples/Dex.Audit.ServerSample/appsettings.json
@@ -12,12 +12,8 @@
     "Username": "guest",
     "Password": "guest"
   },
-  "AuditEventOptions": {
-    "MinSeverityLevel": "Zero",
-    "SystemName": "AuditClientSample"
-  },
-  "AuditLoggerOptions": {
-    "ReadEventsInterval": "00:00:10"
+  "AuditCacheOptions": {
+    "RefreshInterval": "00:00:10"
   },
   "AllowedHosts": "*"
 }
