dex.audit: feat: добавлено подключение к Redis, Consumer теперь принимает Batch

--- a/src/Dex.Audit/Samples/Dex.Audit.ClientSample/appsettings.json
+++ b/src/Dex.Audit/Samples/Dex.Audit.ClientSample/appsettings.json
@@ -19,5 +19,17 @@
   "AuditLoggerOptions": {
     "ReadEventsInterval": "00:00:10"
   },
+  "RedisConfiguration": {
+    "Ssl": false,
+    "AbortOnConnectFail": true,
+    "Hosts": [
+      {
+        "Host": "",
+        "Port": ""
+      }
+    ],
+    "User": "",
+    "Password": ""
+  },
   "AllowedHosts": "*"
 }
