--- a/src/Dex.Audit/Samples/Dex.Audit.ServerSample/appsettings.json
+++ b/src/Dex.Audit/Samples/Dex.Audit.ServerSample/appsettings.json
@@ -15,5 +15,17 @@
   "AuditCacheOptions": {
     "RefreshInterval": "00:00:10"
   },
+  "RedisConfiguration": {
+    "Ssl": false,
+    "AbortOnConnectFail": true,
+    "Hosts": [
+      {
+        "Host": "",
+        "Port": ""
+      }
+    ],
+    "User": "",
+    "Password": ""
+  },
   "AllowedHosts": "*"
 }
