dex.audit: feat: аудируемый MediatR добавлен

--- a/src/Dex.Audit/Samples/Dex.Audit.ClientSample/Dex.Audit.ClientSample.csproj
+++ b/src/Dex.Audit/Samples/Dex.Audit.ClientSample/Dex.Audit.ClientSample.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\Dex.Audit.Logger\Dex.Audit.Logger.csproj"/>
+        <ProjectReference Include="..\..\Dex.Audit.MediatR\Dex.Audit.MediatR.csproj" />
     </ItemGroup>
 
     <ItemGroup>
