--- a/src/Dex.Audit/Tests/Dex.Audit.Sample.Client/Dex.Audit.Sample.Client.csproj
+++ b/src/Dex.Audit/Tests/Dex.Audit.Sample.Client/Dex.Audit.Sample.Client.csproj
@@ -11,7 +11,7 @@
         <ProjectReference Include="..\..\Dex.Audit.EF\Dex.Audit.EF.csproj" />
         <ProjectReference Include="..\..\Dex.Audit.Logger\Dex.Audit.Logger.csproj"/>
         <ProjectReference Include="..\..\Dex.Audit.MediatR\Dex.Audit.MediatR.csproj" />
-        <ProjectReference Include="..\Dex.Audit.Sample.Domain\Dex.Audit.Sample.Domain.csproj" />
+        <ProjectReference Include="..\Dex.Audit.Sample.Shared\Dex.Audit.Sample.Shared.csproj" />
     </ItemGroup>
 
     <ItemGroup>
@@ -25,6 +25,13 @@
         <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.6.2"/>
         <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.6.2"/>
         <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.6.2"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Application\" />
+      <Folder Include="Application\Queries\Users\" />
+      <Folder Include="Domain\" />
+      <Folder Include="Infrastructure\" />
     </ItemGroup>
 
 </Project>
